--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
-               <img src="img/348.jpg" alt="delicia burguer">
+               <img src="TCC/img/348.jpg" alt="delicia burguer">
                <div class="item-info">
                   <h3>Especial Burger</h3>
                   <p>Pão Australiano, nossa deliciosa Maionese (Verde), fatias de queijo cheddar da melhor qualidade; cebola caramelizada; e aquele bacon crocante.</p>
@@ -38,7 +38,7 @@
                </div>
             </div>
             <div class="menu-item">
-               <img src="img/vegano.png" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
+               <img src="TCC/img/vegetariano.jpeg" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
                <div class="item-info">
                   <h3>Hambúrguer Vegetariano</h3>
                   <p>165g de burger de Feijão preto com beterraba; queijo prato; chimi churri; rúcula e molho no pão brioche.</p>
@@ -46,7 +46,7 @@
                </div>
             </div>
             <div class="menu-item">
-               <img src="img/bacon.png" alt="Explosão de Bacon">
+               <img src="TCC/img/bacon.png" alt="Explosão de Bacon">
                <div class="item-info">
                   <h3>Explosão de Bacon</h3>
                   <p>Para os apaixonados por bacon e cheddar; suculento burger bovino de 165g, cebola levemente caramelizada, tiras de bacon crocante e creme de cheddar.</p>
@@ -54,7 +54,7 @@
                </div>
             </div>
             <div class="menu-item">
-               <img src="img/xsalada.png" alt="X-Salada 80g">
+               <img src="TCC/img/xsalada.png" alt="X-Salada 80g">
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
                   <p>X Burger Salada de 80g, American Cheese, Alface, Tomate, molho (c/ cebola branca e picles) no pão brioche.</p>
@@ -67,7 +67,7 @@
       <!--menu de smash-->
       <div class="menu-container">
          <div class="menu-item">
-            <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
+            <img src="TCC/img/barato.jpg" alt="smash tradicional" title="smash tradicional">
             <div class="item-info">
                <h3>smash tradicional 70g</h3>
                <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
