--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       </section>
       <!-- fim menu de itens-->
       <!--menu de smash-->
+      <section class="home">
       <div class="menu-container">
          <div class="menu-item">
             <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
@@ -95,6 +96,7 @@
            </div>
          </div>
       </div>
+   </section> 
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
