--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
                   <p>X Burger Salada de 80g, American Cheese, Alface, Tomate, molho (c/ cebola branca e picles) no pão brioche.</p>
-                  <span class="price">R$20,00</span>
-               </div>
+                  <span class="price">R$20,00</span
             </div>
          </div>
       </section>
@@ -73,7 +72,6 @@
                <h3>smash tradicional 70g</h3>
                <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
                <span class="price">R$18,00</span>
-            </div>
          </div>
       </div>
       <div class="menu-container">
@@ -83,7 +81,6 @@
              <h3>Smash Rhoncus 70g</h3>
              <p>burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
              <span class="price">R$25,00</span>
-           </div>
          </div>
       </div>
       <div class="menu-container">
@@ -93,7 +90,6 @@
              <h3>Smash salada 70g</h3>
              <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
              <span class="price">R$20,00</span>
-           </div>
          </div>
       </div>
    </section> 
