--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
                   <p>X Burger Salada de 80g, American Cheese, Alface, Tomate, molho (c/ cebola branca e picles) no pão brioche.</p>
-                  <span class="price">R$20,00</span
-            </div>
+                  <span class="price">R$20,00</span>
+               </div>
          </div>
       </section>
       <!-- fim menu de itens-->
       <!--menu de smash-->
-      <section class="home">
       <div class="menu-container">
          <div class="menu-item">
             <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
@@ -92,7 +91,7 @@
              <span class="price">R$20,00</span>
          </div>
       </div>
-   </section> 
+   </section>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
