--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
              <span class="price">R$20,00</span>
          </div>
       </div>
+    </div>
    </section>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
