--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
          </div>
       <!-- fim menu de itens-->
       <!--menu de smash-->
-         <div class="menu-item">
+      <div class="menu-container">
+         <div class="menu-smash">
             <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
             <div class="item-info">
                <h3>smash tradicional 70g</h3>
@@ -71,7 +72,7 @@
                <span class="price">R$18,00</span>
          </div>
       </div>
-         <div class="menu-item">
+         <div class="menu-smash">
             <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
             <div class="item-info">
              <h3>Smash Rhoncus 70g</h3>
@@ -80,7 +81,7 @@
          </div>
       </div>
 
-         <div class="menu-item">
+         <div class="menu-smash">
             <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
             <div class="item-info">
              <h3>Smash salada 70g</h3>
@@ -88,7 +89,6 @@
              <span class="price">R$20,00</span>
          </div>
       </div>
-    </div>
    </section>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
