--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                   <span class="price">R$20,00</span>
                </div>
          </div>
+      </section>
       <!-- fim menu de itens-->
       <!--menu de smash-->
       <div class="menu-container">
