--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                </div>
             </div>
             <div class="menu-item">
-               <img src="img/vegetariano.jpeg" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
+               <img src="img/vegano.png" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
                <div class="item-info">
                   <h3>Hambúrguer Vegetariano</h3>
                   <p>165g de burger de Feijão preto com beterraba; queijo prato; chimi churri; rúcula e molho no pão brioche.</p>
@@ -60,34 +60,19 @@
                   <p>X Burger Salada de 80g, American Cheese, Alface, Tomate, molho (c/ cebola branca e picles) no pão brioche.</p>
                   <span class="price">R$20,00</span>
                </div>
+            </div>
          </div>
       </section>
       <!-- fim menu de itens-->
       <!--menu de smash-->
       <div class="menu-container">
-         <div class="menu-smash">
+         <div class="menu-item">
             <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
             <div class="item-info">
                <h3>smash tradicional 70g</h3>
                <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
                <span class="price">R$18,00</span>
-         </div>
-      </div>
-     <br> 
-         <div class="menu-smash">
-            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
-            <div class="item-info">
-             <h3>Smash Rhoncus 70g</h3>
-             <p>burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
-             <span class="price">R$25,00</span>
-         </div>
-      </div>
-         <div class="menu-smash">
-            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
-            <div class="item-info">
-             <h3>Smash salada 70g</h3>
-             <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
-             <span class="price">R$20,00</span>
+            </div>
          </div>
       </div>
       <!-- Seção Contato -->
