--- a/index.html
+++ b/index.html
@@ -61,18 +61,37 @@
                   <span class="price">R$20,00</span>
                </div>
             </div>
+            
       <!-- fim menu de itens-->
-      <!--menu de smash-->
-      <div class="menu-container">
+            <!--menu de smash-->
+            <div class="menu-container">
+               <div class="menu-item">
+                  <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
+                  <div class="item-info">
+                     <h3>smash tradicional 70g</h3>
+                     <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
+                     <span class="price">R$18,00</span>
+                  </div>
+               </div>
          <div class="menu-item">
-            <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
+            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
             <div class="item-info">
-               <h3>smash tradicional 70g</h3>
-               <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
-               <span class="price">R$18,00</span>
-            </div>
+             <h3>Smash Rhoncus 70g</h3>
+             <p>burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
+             <span class="price">R$25,00</span>
          </div>
       </div>
+
+         <div class="menu-item">
+            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
+            <div class="item-info">
+             <h3>Smash salada 70g</h3>
+             <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
+             <span class="price">R$20,00</span>
+         </div>
+      </div>
+    </div>
+   </section>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
