--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
              <span class="price">R$20,00</span>
          </div>
     </div>
+            </div>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
