--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
             </div>
          </div>
       </div>
+         <div class="menu-smash">
+            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
+            <div class="item-info">
+             <h3>Smash Rhoncus 70g</h3>
+             <p>burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
+             <span class="price">R$25,00</span>
+         </div>
+      </div>
+         <div class="menu-smash">
+            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
+            <div class="item-info">
+             <h3>Smash salada 70g</h3>
+             <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
+             <span class="price">R$20,00</span>
+         </div>
+      </div>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
