mudei os menu-smash para menu-itens

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                <span class="price">R$18,00</span>
             </div>
          </div>
-      </div>
-         <div class="menu-smash">
+      
+         <div class="menu-item">
             <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
             <div class="item-info">
              <h3>Smash Rhoncus 70g</h3>
@@ -83,7 +83,7 @@
              <span class="price">R$25,00</span>
          </div>
       </div>
-         <div class="menu-smash">
+         <div class="menu-item">
             <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
             <div class="item-info">
              <h3>Smash salada 70g</h3>
