--- a/index.html
+++ b/index.html
@@ -62,35 +62,37 @@
                </div>
             </div>
          </div>
-      </section>
-      <!-- fim menu de itens-->
-      <!--menu de smash-->
-      <div class="menu-container">
-         <div class="menu-item">
-            <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
-            <div class="item-info">
-               <h3>smash tradicional 70g</h3>
-               <p>Pão brioche, burger smash 70g, queiijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
-               <span class="price">R$18,00</span>
+
+         <!-- Menu de Smash -->
+         <div class="menu-container">
+            <div class="menu-item">
+               <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
+               <div class="item-info">
+                  <h3>Smash Tradicional 70g</h3>
+                  <p>Pão brioche, burger smash 70g, queijo cheddar em fatia, molho smash (c/ cebola e picles)</p>
+                  <span class="price">R$18,00</span>
+               </div>
+            </div>
+            <div class="menu-item">
+               <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
+               <div class="item-info">
+                  <h3>Smash Rhoncus 70g</h3>
+                  <p>Burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
+                  <span class="price">R$25,00</span>
+               </div>
+            </div>
+            <div class="menu-item">
+               <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
+               <div class="item-info">
+                  <h3>Smash Salada 70g</h3>
+                  <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
+                  <span class="price">R$20,00</span>
+               </div>
             </div>
          </div>
+      </section>
+      <!-- fim menu de itens -->
       
-         <div class="menu-item">
-            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
-            <div class="item-info">
-             <h3>Smash Rhoncus 70g</h3>
-             <p>burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
-             <span class="price">R$25,00</span>
-         </div>
-      </div>
-         <div class="menu-item">
-            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
-            <div class="item-info">
-             <h3>Smash salada 70g</h3>
-             <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
-             <span class="price">R$20,00</span>
-         </div>
-      </div>
       <!-- Seção Contato -->
       <section id="contato" class="section-content">
          <h2>Contato</h2>
