--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                </div>
             </div>
             <div class="menu-item">
-               <img src="img/xsalada.png" alt="X-Salada 80g">
+               <img src="img/x-salada.jpg" alt="X-Salada 80g">
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
                   <p>X Burger Salada de 80g, American Cheese, Alface, Tomate, molho (c/ cebola branca e picles) no pão brioche.</p>
