--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <section id="menu" class="section-content">
          <h2 style="text-align: center;">Nosso Menu</h2>
          <br>
+      <p>Burgers 165g</p>
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
@@ -63,6 +64,7 @@
             </div>
          </div>
 <br>
+     <p>Menu de Smashs Burgers 70g</p>
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
