--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                   <span class="price">R$20,00</span>
                </div>
             </div>
+            <div class="menu-item">
+               <img src="img/squeijo.png" alt="smash queijo" title="smash queijo">
+               <div class="item-info">
+                  <h3>Smash queijo 70g</h3>
+                  <p>Burger smash 80g, American Cheese.</p>
+                  <span class="price">R$15,50</span>
+               </div>
+            </div>
          </div>
       </section>
       <!-- fim menu de itens -->
