--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section id="menu" class="section-content">
          <h2 style="text-align: center;">Nosso Menu</h2>
          <br>
-      <div class="menu">Burgers 165g</div>
+      <div class="separacao">Burgers 165g</div>
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
@@ -64,7 +64,7 @@
             </div>
          </div>
 <br>
-     <div classe="menu">Menu de Smashs Burgers 70g </div>
+     <div classe="separacao">Menu de Smashs Burgers 70g </div>
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
