--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section id="menu" class="section-content">
          <h2 style="text-align: center;">Nosso Menu</h2>
          <br>
-      <div class="separacao">Burgers 165g</div>
+    <div clase="separacao">Burger 165g</div>
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
