--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section id="menu" class="section-content">
          <h2 style="text-align: center;">Nosso Menu</h2>
          <br>
-    <div clase="separacao">Burger 165g</div>
+    <center><div clase="separacao">Burger 165g</div></center>
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
@@ -64,7 +64,7 @@
             </div>
          </div>
 <br>
-<div classe="separacao">Menu de Smashs Burgers 70g</div>
+<center><div classe="separacao">Menu de Smashs Burgers 70g</div></center>
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
