--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
          <!-- Menu de Itens -->
          <div class="menu-container">
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/348.jpg" alt="delicia burguer">
                <div class="item-info">
                   <h3>Especial Burger</h3>
@@ -38,6 +39,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/vegano.png" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
                <div class="item-info">
                   <h3>Hambúrguer Vegetariano</h3>
@@ -46,6 +48,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/bacon.png" alt="Explosão de Bacon">
                <div class="item-info">
                   <h3>Explosão de Bacon</h3>
@@ -54,6 +57,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/x-salada.jpg" alt="X-Salada 80g">
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
@@ -66,6 +70,7 @@
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
                <div class="item-info">
                   <h3>Smash Tradicional 70g</h3>
@@ -74,6 +79,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
                <div class="item-info">
                   <h3>Smash Rhoncus 70g</h3>
@@ -82,6 +88,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
                <div class="item-info">
                   <h3>Smash Salada 70g</h3>
@@ -90,6 +97,7 @@
                </div>
             </div>
             <div class="menu-item">
+               <div class="item-details">
                <img src="img/squeijo.png" alt="smash queijo" title="smash queijo">
                <div class="item-info">
                   <h3>Smash queijo 70g</h3>
