--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       <section id="menu" class="section-content">
          <h2 style="text-align: center;">Nosso Menu</h2>
          <br>
+    <center><div clase="separacao">Burger 165g</div></center>
          <!-- Menu de Itens -->
          <div class="menu-container">
-            <div class="menu-item">
-               <div class="item-details">
                <img src="img/348.jpg" alt="delicia burguer">
                <div class="item-info">
                   <h3>Especial Burger</h3>
@@ -39,7 +38,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/vegano.png" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
                <div class="item-info">
                   <h3>Hambúrguer Vegetariano</h3>
@@ -48,7 +46,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/bacon.png" alt="Explosão de Bacon">
                <div class="item-info">
                   <h3>Explosão de Bacon</h3>
@@ -57,7 +54,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/x-salada.jpg" alt="X-Salada 80g">
                <div class="item-info">
                   <h3>X-Salada 80g</h3>
@@ -70,7 +66,6 @@
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/barato.jpg" alt="smash tradicional" title="smash tradicional">
                <div class="item-info">
                   <h3>Smash Tradicional 70g</h3>
@@ -79,7 +74,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
                <div class="item-info">
                   <h3>Smash Rhoncus 70g</h3>
@@ -88,7 +82,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
                <div class="item-info">
                   <h3>Smash Salada 70g</h3>
@@ -97,7 +90,6 @@
                </div>
             </div>
             <div class="menu-item">
-               <div class="item-details">
                <img src="img/squeijo.png" alt="smash queijo" title="smash queijo">
                <div class="item-info">
                   <h3>Smash queijo 70g</h3>
