--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <center><div clase="separacao">Burger 165g</div></center>
          <!-- Menu de Itens -->
          <div class="menu-container">
+            <div class="menu-item">
                <img src="img/348.jpg" alt="delicia burguer">
                <div class="item-info">
                   <h3>Especial Burger</h3>
@@ -63,6 +64,7 @@
             </div>
          </div>
 <br>
+<center><div classe="separacao">Menu de Smashs Burgers 70g</div></center>
          <!-- Menu de Smash -->
          <div class="menu-container">
             <div class="menu-item">
