--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <!-- Menu de Itens -->
         <div class="menu-container">
+            <!-- Especial Burger -->
             <div class="menu-item">
                 <img src="img/348.jpg" alt="Delícia Burger">
                 <div class="item-info">
@@ -39,6 +40,8 @@
                     <span class="price">R$30,00</span>
                 </div>
             </div>
+
+            <!-- Hambúrguer Vegetariano -->
             <div class="menu-item">
                 <img src="img/vegano.png" alt="Hambúrguer Vegetariano" title="Hambúrguer Vegetariano">
                 <div class="item-info">
@@ -47,6 +50,8 @@
                     <span class="price">R$30,00</span>
                 </div>
             </div>
+
+            <!-- Explosão de Bacon -->
             <div class="menu-item">
                 <img src="img/bacon.png" alt="Explosão de Bacon">
                 <div class="item-info">
@@ -55,6 +60,8 @@
                     <span class="price">R$32,00</span>
                 </div>
             </div>
+
+            <!-- X-Salada -->
             <div class="menu-item">
                 <img src="img/xsalada.png" alt="X-Salada 80g">
                 <div class="item-info">
@@ -83,7 +90,7 @@
         <h2>Contato</h2>
         <p>Endereço: Rua das Delícias, 123 - Centro</p>
         <p>Telefone: (11) 1234-5678</p>
-        <p>Email: contato@hamburgueriadelicia.com</p>
+        <p>Email: <a href="mailto:contato@hamburgueriadelicia.com">contato@hamburgueriadelicia.com</a></p>
     </section>
 
     <!-- Rodapé -->
