--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <!-- X-Salada -->
             <div class="menu-item">
-                <img src="img/xsalada.png" alt="X-Salada 80g">
+                <img src="img/x-salada.jpg" alt="X-Salada 80g">
                 <div class="item-info">
                     <h3>X-Salada 80g</h3>
                     <p>Burger de 80g com queijo, alface, tomate, molho especial com cebola e picles no pão brioche.</p>
