--- a/index.html
+++ b/index.html
@@ -82,8 +82,31 @@
                 </div>
             </div>
         </div>
+        <div class="menu-item">
+            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
+            <div class="item-info">
+               <h3>Smash Rhoncus 70g</h3>
+               <p>Burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
+               <span class="price">R$25,00</span>
+            </div>
+         </div>
+         <div class="menu-item">
+            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
+            <div class="item-info">
+               <h3>Smash Salada 70g</h3>
+               <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
+               <span class="price">R$20,00</span>
+            </div>
+         </div>
+         <div class="menu-item">
+            <img src="img/squeijo.png" alt="smash queijo" title="smash queijo">
+            <div class="item-info">
+               <h3>Smash queijo 70g</h3>
+               <p>Burger smash 80g, American Cheese.</p>
+               <span class="price">R$15,50</span>
+            </div>
+         </div>
     </section>
-
     <!-- Seção Contato -->
     <section id="contato" class="section-content">
         <h2>Contato</h2>
