--- a/index.html
+++ b/index.html
@@ -71,41 +71,49 @@
                 </div>
             </div>
         </div>
-        <!-- Menu de Smash -->
-        <div class="menu-container">
-            <div class="menu-item">
-                <img src="img/barato.jpg" alt="Smash Tradicional" title="Smash Tradicional">
-                <div class="item-info">
-                    <h3>Smash Tradicional 70g</h3>
-                    <p>Pão brioche, burger smash de 70g, queijo cheddar em fatia e molho especial com cebola e picles.</p>
-                    <span class="price">R$18,00</span>
-                </div>
-            </div>
+     <!-- Menu de Smash -->
+<div class="menu-container">
+    <!-- Smash Tradicional -->
+    <div class="menu-item">
+        <img src="img/barato.jpg" alt="Smash Tradicional" title="Smash Tradicional">
+        <div class="item-info">
+            <h3>Smash Tradicional 70g</h3>
+            <p>Pão brioche, burger smash de 70g, queijo cheddar em fatia e molho especial com cebola e picles.</p>
+            <span class="price">R$18,00</span>
         </div>
-        <div class="menu-item">
-            <img src="img/smashRhoncus.jpg" alt="smash rhoncus" title="smash rhoncus">
-            <div class="item-info">
-               <h3>Smash Rhoncus 70g</h3>
-               <p>Burgers de 70g (SMASH) amassados na chapa com queijo Cheddar em fatias e molho especial à base de cebola roxa e picles</p>
-               <span class="price">R$25,00</span>
-            </div>
-         </div>
-         <div class="menu-item">
-            <img src="img/smashSalad.jpg" alt="smash Salada" title="smash Salada">
-            <div class="item-info">
-               <h3>Smash Salada 70g</h3>
-               <p>Burger smash 80g, American Cheese, Alface, Tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
-               <span class="price">R$20,00</span>
-            </div>
-         </div>
-         <div class="menu-item">
-            <img src="img/squeijo.png" alt="smash queijo" title="smash queijo">
-            <div class="item-info">
-               <h3>Smash queijo 70g</h3>
-               <p>Burger smash 80g, American Cheese.</p>
-               <span class="price">R$15,50</span>
-            </div>
-         </div>
+    </div>
+
+    <!-- Smash Rhoncus -->
+    <div class="menu-item">
+        <img src="img/smashRhoncus.jpg" alt="Smash Rhoncus" title="Smash Rhoncus">
+        <div class="item-info">
+            <h3>Smash Rhoncus 70g</h3>
+            <p>Burgers de 70g (SMASH) amassados na chapa com queijo cheddar em fatias e molho especial à base de cebola roxa e picles.</p>
+            <span class="price">R$25,00</span>
+        </div>
+    </div>
+
+    <!-- Smash Salada -->
+    <div class="menu-item">
+        <img src="img/smashSalad.jpg" alt="Smash Salada" title="Smash Salada">
+        <div class="item-info">
+            <h3>Smash Salada 70g</h3>
+            <p>Burger smash 80g, American Cheese, alface, tomate, molho Smash (c/ cebola branca e picles) no pão brioche.</p>
+            <span class="price">R$20,00</span>
+        </div>
+    </div>
+
+    <!-- Smash Queijo -->
+    <div class="menu-item">
+        <img src="img/squeijo.png" alt="Smash Queijo" title="Smash Queijo">
+        <div class="item-info">
+            <h3>Smash Queijo 70g</h3>
+            <p>Burger smash 80g, American Cheese.</p>
+            <span class="price">R$15,50</span>
+        </div>
+    </div>
+</div>
+
     </section>
     <!-- Seção Contato -->
     <section id="contato" class="section-content">
